<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="id.luwakdev.magiscamp.MainActivity">

    <ImageButton
        android:id="@+id/tts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/next"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:background="@null"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/tts"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/src"
        android:layout_alignStart="@+id/src" />

    <ImageButton
        android:id="@+id/src"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/sound"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:background="@null"
        android:contentDescription="@string/src" />

    <ImageButton
        android:id="@+id/play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/thumbnail"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:background="@null"
        android:contentDescription="@string/pley"
        android:layout_below="@+id/src"
        android:layout_alignLeft="@+id/src"
        android:layout_alignStart="@+id/src"
        android:layout_marginTop="40dp" />

</RelativeLayout>
