<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:gravity="center"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10px"
        android:orientation="horizontal"
        android:gravity="center_horizontal" >

    <ImageButton
        android:id="@+id/btnPlay"
        android:src="@drawable/next"
        android:layout_width="89dp"
        android:layout_height="91dp"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        android:background="@null"
        android:layout_gravity="bottom"
        android:padding="0px"
        android:contentDescription="@string/playy" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10px"
        android:orientation="vertical"
        android:gravity="center_horizontal" >

    <ImageButton
        android:id="@+id/btnPause"
        android:src="@drawable/pause"
        android:layout_width="89dp"
        android:layout_height="91dp"
        android:background="@null"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:padding="0px"
        android:contentDescription="@string/fause" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10px"
        android:orientation="horizontal"
        android:gravity="center_horizontal" >

    <ImageButton
        android:id="@+id/btnStop"
        android:src="@drawable/thumbnail"
        android:layout_width="89dp"
        android:layout_height="91dp"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:background="@null"
        android:padding="0px"
        android:contentDescription="@string/setop"/>

        </LinearLayout>

</LinearLayout>
